--- a/diplomarbeit/sections/ch3_implementierung/daten-management-analyse/main.tex
+++ b/diplomarbeit/sections/ch3_implementierung/daten-management-analyse/main.tex
@@ -2,9 +2,8 @@
 \subsection{Datenmanagement und Datenanalyse}
 \label{subsec:datenmanagementimpl}
 
-\textbf{Lesen der Daten}
-\textbf{Filtern der Daten}
-\textbf{Speicherung der Daten}
-\textbf{Redis}
+\input{sections/ch3_implementierung/daten-management-analyse/os.tex}
+\input{sections/ch3_implementierung/daten-management-analyse/redis.tex}
+\input{sections/ch3_implementierung/daten-management-analyse/sensordatensammlung.tex}
 
 \clearpage % DO NOT REMOVE
