--- a/diplomarbeit/sources.bib
+++ b/diplomarbeit/sources.bib
@@ -115,6 +115,23 @@
     note = {Accessed on 24.03.2016}
 }
 
+@misc{MELD.CH3-redis.mainWebsite, 
+    author = {Redis},
+    year = {2016},
+    title = {Redis Webseite},
+    howpublished = "\url{http://redis.io}",
+    note = {Accessed on 30.03.2016}
+}
+
+@misc{MELD.CH3-redis.documentation, 
+    author = {Redis},
+    year = {2016},
+    title = {Redis Dokumentation},
+    howpublished = "\url{http://redis.io/documentation}",
+    note = {Accessed on 30.03.2016}
+}
+
+
 @misc{SIMR.CH1-Fahrstil-Analyse.CarnotWirkungsgrad,
     author = {Prof. Dr. Karl-Heiz Kampert},
     title = {Kreisprozesse},
@@ -278,7 +295,7 @@ note = {Accessed on 28.03.2016}
 
 @misc{SIMR.CH2-motorwirkungsgrad.FrackingChemicals,
 	author = {Theo Colborna, Carol Kwiatkowskia, Kim Schultza & Mary Bachrana},
-	year = {2011}
+	year = {2011},
 	title = {Natural Gas Operations from a Public Health Perspective, p. 11},
 	howpublished = "\url{http://www2.cce.cornell.edu/naturalgasdev/documents/pdfs/fracking%20chemicals%20from%20a%20public%20health%20perspective.pdf}",
 	note = {Accessed on 29.03.2016}
@@ -286,7 +303,7 @@ note = {Accessed on 28.03.2016}
 
 @misc{SIMR.CH2-motorwirkungsgrad.FrackingGroundwater,
 	author = {TEDX, The Endocrine Disruption Exchange, Dr. Theo Colborn},
-	year = {2009}
+	year = {2009},
 	title = {Chemicals in Natural Gas Operations, Introduction},
 	howpublished = "\url{https://web.archive.org/web/20120414043256/http://www.endocrinedisruption.com/chemicals.introduction.php}",
 	note = {Accessed on 29.03.2016}
