--- a/diplomarbeit/sources.bib
+++ b/diplomarbeit/sources.bib
@@ -387,3 +387,28 @@ title = {Fuel Consumption From OBDII Port Parameter},
 howpublished = "\url{http://stackoverflow.com/questions/17170646/fuel-consumption-from-obd2-port-parameters}",
 note = {Accessed on 30.03.2016}
 }
+
+@misc{SIMR.CH3-schaltvorschlag.hextoBinaryConverter, 
+author = {Raphael Simsek},
+year = {2016},
+title = {Umrechnung von Zahlensystemen},
+howpublished = "\url{http://www.arndt-bruenner.de/mathe/scripts/Zahlensysteme.htm}",
+note = {Accessed on 30.03.2016}
+}
+
+@misc{SIMR.CH3-schaltvorschlag.GaugeView, 
+author = {Sulejman Sarajlija},
+year = {2015},
+title = {An Android library for drawing gauges on Canvas.},
+howpublished = "\url{https://github.com/Sulejman/GaugeView}",
+note = {Accessed on 30.03.2016}
+}
+
+@misc{SIMR.CH3-schaltvorschlag.CircleImageView, 
+author = {Henning Dodenhof},
+year = {2015},
+title = {A circular ImageView for Android},
+howpublished = "\url{https://github.com/hdodenhof/CircleImageView}",
+note = {Accessed on 30.03.2016}
+}
+
