--- a/diplomarbeit/sections/ch5_conclusio_outlook/conclusio.tex
+++ b/diplomarbeit/sections/ch5_conclusio_outlook/conclusio.tex
@@ -12,9 +12,7 @@ ein DS1621 Temperatursensor.
 \item Ein Datenmanagement, die die Schnittstelle des Car-PC und des Motormanagement ausliest und der Android-App zur Verfügung stellt.
 \item Front-End einer Web-Applikation, welches die gesammelten Daten retrospektiv darstellt.
 \end{itemize}
-
-\newline
-\section{Workflow des Projektes}
+\section{\newline Workflow des Projektes}
 	\subsection{Tobias Perny - Hardware und Sensorik}
 	Tobias Perny ist im Projekt wie bereits erwähnt für die Hardware und Sensorik zuständig. Er arbeitet mit einem Raspberry Pi2 Single Board Computer (SBC) auf welchem verschiedene Sensoren direkt montiert sind, welche dann interpretiert werden. Herr Perny verwendet die Programmiersprache Python um die Sensoren anzusprechen und diese mittels der Datenblätter der Sensoren in Informationen umzuwandeln. Diese Werte werden dann von Herrn Melichar endgültig in Einheiten umgesetzt.
 	Zusätzlich zu den eigenen Sensoren liest der Raspberry Pi2 außerdem die OBD-II Motordaten aus stellt diese zur Speicherung bereit. 
