--- a/diplomarbeit/erklaerung.tex
+++ b/diplomarbeit/erklaerung.tex
@@ -7,6 +7,8 @@ Wien, \today
 
 \vspace{1.5cm}
 
+\todo{MELD: Unterschreiben und inkludieren}
+
 \begin{flushright}
 	\begin{tabular}{r}
 	 \makebox[2.5in]{\hrulefill}\\
