--- a/diplomarbeit/sections/ch2_technische_grundlagen/can-bus/obd2.tex
+++ b/diplomarbeit/sections/ch2_technische_grundlagen/can-bus/obd2.tex
@@ -70,6 +70,7 @@ Diese kann man in folgende Tabelle einfügen und so erkennen welche PID's unters
 
 \begin{table}[!htb]
 \centering
+\resizebox{\columnwidth}{!}{%
 \begin{tabular}{|l|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|}
 \hline
 Hexadecimal & \multicolumn{4}{c|}{B} & \multicolumn{4}{c|}{E} & \multicolumn{4}{c|}{1} & \multicolumn{4}{c|}{F} \\ \hline
@@ -81,6 +82,7 @@ Binary & 1 & 0 & 1 & 0 & 1 & 0 & 0 & 0 & 0 & 0 & 0 & 1 & 0 & 0 & 1 & 1 \\ \hline
 Supported? & \cellcolor[HTML]{9AFF99}Yes & \cellcolor[HTML]{FD6864}No & \cellcolor[HTML]{9AFF99}Yes & \cellcolor[HTML]{FD6864}No & \cellcolor[HTML]{9AFF99}Yes & \cellcolor[HTML]{FD6864}No & \cellcolor[HTML]{FD6864}No & \cellcolor[HTML]{FD6864}No & \cellcolor[HTML]{FD6864}No & \cellcolor[HTML]{FD6864}No & \cellcolor[HTML]{FD6864}No & \cellcolor[HTML]{9AFF99}Yes & \cellcolor[HTML]{FD6864}No & \cellcolor[HTML]{FD6864}No & \cellcolor[HTML]{9AFF99}Yes & \cellcolor[HTML]{9AFF99}Yes \\ \hline
 PID number & 11 & 12 & 13 & 14 & 15 & 16 & 17 & 18 & 19 & 1A & 1B & 1C & 1D & 1E & 1F & 20 \\ \hline
 \end{tabular}
+}
 \caption{Tabelle zur bitweisen Verarbeitung der Hexadezimal Zeichenkette \cite{SIMR.CH2-obd2.HextoBinary}}
 \label{tableHextoPID}
 \end{table}
