--- a/diplomarbeit/sections/ch2_technische_grundlagen/can-bus/thermodynamik.tex
+++ b/diplomarbeit/sections/ch2_technische_grundlagen/can-bus/thermodynamik.tex
@@ -22,7 +22,7 @@ Die Probleme, die durch die Öl-Förderung entstehen enden aber noch nicht hier,
 \end{figure}
 
 \newpage
-\textbf{zukünftige Probleme durch Öl-Förderung\nextline}
+\textbf{Zukünftige Probleme durch Öl-Förderung\nextline}
 All diese, bereits vorkommenden, Probleme scheinen aber in keinem Verhältnis zu den Problemen die uns erwarten, wenn wir alles Öl auf der Erde verbrauchen, zu stehen. Sollten wir nämlich alles Öl auf der Erde verbrennen, so würde uns ein Anstieg des Ozeans um 44ft (13.41m) erwarten. \cite{SIMR.CH2-motorwirkungsgrad.SeaLevelRiseAllOilBurnt} Da dies aber unwahrscheinlich zeitnah passieren wird, wurde auch ein Anstieg von 4ft (0.91m) innerhalb eines Jahrhunderts, bei anhaltendem Ölverbrauch, von der NASA vorhergesagt. \cite{SIMR.CH2-motorwirkungsgrad.SeaLevelRiseCentury}
 
 \begin{figure}[!htb]\centering
