--- a/diplomarbeit/special/title.tex
+++ b/diplomarbeit/special/title.tex
@@ -1,6 +1,12 @@
 \begin{titlepage}
+	\begin{figure}[!h] \centering{
+		\includegraphics[scale=0.82]{special/HTL_Titelseite_DA_A4_2016.pdf}}
+	\end{figure}
 
-	\begin{figure}[h]
+	\clearpage
+	\pagenumbering{gobble}
+
+	\begin{figure}[!h]
 		\makebox[\textwidth]{%
 		\includegraphics[width=0.25\linewidth]{images/bestshift_logo.png}%
 		\hfill    
