--- a/diplomarbeit/anerkennungen.tex
+++ b/diplomarbeit/anerkennungen.tex
@@ -1,8 +1,3 @@
 \section*{Anerkennungen}
 
-Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+Wir widmen diese Arbeit jenen Personen die uns gezeigt haben, dass unser Aufwand wertgeschätzt wird; die uns in den schwierigen Phasen unterstützt und motiviert haben; und die uns auch auf einer persönlichen Ebene weitergebracht haben. Insbesondere bedanken wir uns bei unserem unersetzlichen Projektbetreuer Erhard List.
