--- a/diplomarbeit/document.tex
+++ b/diplomarbeit/document.tex
@@ -7,14 +7,13 @@
 
 \gdef\myauthor{BestShift}
 
-\gdef\myversion{1.0}
+\gdef\myversion{1.1}
 \gdef\mybegin{\today}
 \gdef\myfinish{\today}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % SETTINGS
 \input{special/preamble.tex}
-%\input{special/btxmac.tex}
 
 \linespread{0.94}
 \lhead{Diplomarbeit}
@@ -64,28 +63,29 @@
 \endgroup
 
 % APPENDENCIES
-\pagenumbering{Roman}
 \clearpage
-\begin{appendices}
-	\section{Figuren}
+\pagenumbering{Roman}
+\section{Appendix}
+
+\subsection{Figuren}
+	\begingroup
 		\makeatletter
 		\@starttoc{lof}% Print List of Figures
 		\makeatother
-	\section{Tabellen}
+	\endgroup
+
+\subsection{Tabellen}
+	\begingroup
 		\makeatletter
 		\@starttoc{lot}% Print List of Tables
 		\makeatother
-	\section{Source code}
+	\endgroup
+
+\subsection{Listings}
+	\begingroup
 		\makeatletter
 		\@starttoc{lol}% Print List of Listings lol
 		\makeatother
-	\section{Anhänge}
-		
-	\section{Zeitaufzeichnungen}
-		\todo{} idk if necessary
-	\section{Glossar}
-		\todo{} this is going to be a female dog.
-\end{appendices}
-
+	\endgroup
 \end{document}
 
