--- a/diplomarbeit/sections/ch3_implementierung/konzept.tex
+++ b/diplomarbeit/sections/ch3_implementierung/konzept.tex
@@ -1,4 +1,14 @@
 \lfoot{Tobias Perny}
 
-\comment{MELD (see text below)}
-Das sollt eine Grafik sein, und ggf. eine Beschreibung dazu.
+\begin{figure}[!htb]
+	\centering
+	\includegraphics[scale=0.5]{images/konzept}
+	\caption{Konzept des BestShift Systems}
+\end{figure}
+
+Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
