Added all my stuff -- sources and pictures follow

--- a/diplomarbeit/sections/ch3_implementierung/konzept.tex
+++ b/diplomarbeit/sections/ch3_implementierung/konzept.tex
@@ -6,9 +6,14 @@
 	\caption{Konzept des BestShift Systems}
 \end{figure}
 
-Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+Zur Umsetzung dieses Projektes wurde eine Konzeptgrafik erstellt, um die Aufabentrennung zu visualisieren.
+\nextline
+Die erste Aufgabe ist das vergleichen und auswählen verschiedener Sensoren, mit welchen Beschleunigungskräfte und Innenraumtemperatur gemessen werden kann. Zu diesem Punkt zählt auch die Auswahl einen Bluetoothfähigen OBDII Adapters.
+\nextline
+Der nächste Punkt ist die Erstellung eines Car-PC's. Dieser muss in einen DIN-Schacht der Mittelkonsole eines Fahrzeugs installiert werden können. Auf diesem läuft ein Redis Server, und alle oben genannten Sensoren sind in diesem Integriert.
+\nextline
+Als weitere Komponente kann man auf obiger Grafik ein Smartphone erkennen, welches eine Android-Applikation symbolisiert. Mithilfe dieser Adroid-App kann der Fahrer seinen Fahrstil analysieren und möglicherweise verbessern.
+\nextline
+SERVER!!!!!!
+\nextline
+WEBAPP!!!!!!
