--- a/diplomarbeit/sections/ch4_wirtschaftlichkeit/vermarktung.tex
+++ b/diplomarbeit/sections/ch4_wirtschaftlichkeit/vermarktung.tex
@@ -1,11 +1,10 @@
 \lfoot{Autor: Tobias Perny}
 \subsection{Vermarktnug des Projekts}
 
-Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+Zur Vermarktung des Projektes hat sich das Team mehrere Varianten überlegt.
+\nextline
+Beispielsweise könnte die Verbindung mit einem Speditionsunternehmen oder einer Fahrschule aufgebaut werden, um unser Produkt in Umlauf zu bringen.
+\nextline
+Eine weitere Überlegung des Teams war es, eine Anbindung an soziale Netzwerke, wie Facebook, zu Implementieren. Somit ist es jedem Benutzer der App möglich, eine abgeschlossene Fahrt, online darzustellen. Mithilfe dieser Funktion ist es möglich, schnell und einfach, Werbung für das Projekt zu machen.
 
 \clearpage % DO NOT REMOVE
